--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.11.0",
     "framer-motion": "^12.23.7",
     "gsap": "^3.13.0",
+    "https": "^1.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
