--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@capacitor/android": "7.4.2",
+    "@capacitor/core": "^7.4.2",
     "@tailwindcss/vite": "^4.1.11",
     "@zxing/library": "^0.21.3",
     "axios": "^1.11.0",
@@ -22,6 +24,7 @@
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
+    "@capacitor/cli": "^7.4.2",
     "@eslint/js": "^9.30.1",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
